--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,11 @@ description = "List of scripts for MCP"
 requires-python = ">=3.12"
 dependencies = [
     "fastmcp>=0.4.1",
+    "python-dotenv>=1.1.0",
+    "requests>=2.32.3",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.4",
 ]
