--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "List of scripts for MCP"
 requires-python = ">=3.12"
 dependencies = [
     "fastmcp>=0.4.1",
+    "httpx>=0.28.1",
     "python-dotenv>=1.1.0",
-    "requests>=2.32.3",
 ]
 
 [dependency-groups]
