--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 description = "List of scripts for MCP"
 requires-python = ">=3.12"
 dependencies = [
-    "fastmcp>=0.4.1",
     "httpx>=0.28.1",
+    "mcp[cli]>=1.6.0",
     "python-dotenv>=1.1.0",
 ]
 
